--- a/example/example_config.json
+++ b/example/example_config.json
@@ -25,6 +25,9 @@
 
     },
     "mc_datasets": {
+        "TTToSemiLeptonic_TuneCP5_13TeV-powheg-pythia8": [
+            "/TTToSemiLeptonic_TuneCP5_13TeV-powheg-pythia8/RunIISummer20UL18NanoAODv9-106X_upgrade2018_realistic_v16_L1v1-v1/NANOAODSIM"
+        ],  
         "TGJets_TuneCP5_13TeV-amcatnlo-madspin-pythia8": [
             "/TGJets_TuneCP5_13TeV-amcatnlo-madspin-pythia8/RunIISummer20UL18NanoAODv9-106X_upgrade2018_realistic_v16_L1v1-v2/NANOAODSIM"
         ],
